csrc/tests/codegen_probes/errors/err_next_wrong_var.bas
' REJECT: NEXT names a different variable than its FOR.
' zxbparser p_next:1583 syntax_error_wrong_for_var.
Dim i As Byte
Dim j As Byte
For i = 1 To 10
Next j
